--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -1,4 +1,3 @@
-#/home/dev.alxmultimedia.com/frontend/deploy_frontend.yml
 name: Déployer Frontend Dev
 
 on:
@@ -64,16 +63,24 @@ jobs:
             docker network create $NETWORK || true
           "
 
-      # Étape 8 : Copier le build sur le serveur
-      - name: 8 - Copy build to server
+      # Étape 8 : Copier le build et les fichiers nécessaires sur le serveur
+      - name: 8 - Copy build and config to server
         run: |
-          mkdir -p ~/.ssh
-          touch ~/.ssh/known_hosts
-          ssh-keyscan -p ${SSH_PORT} -H ${SERVER_IP} >> ~/.ssh/known_hosts
-          rsync -avz --delete build/ ${SSH_USER}@${SERVER_IP}:${DEPLOY_DIRECTORY} -e "ssh -p ${SSH_PORT} -o IdentitiesOnly=yes -i /tmp/git_id_rsa"
+          mkdir -p build_with_config
+          cp -R build/* build_with_config/
+          cp package.json package-lock.json build_with_config/
+          rsync -avz build_with_config/ ${SSH_USER}@${SERVER_IP}:${DEPLOY_DIRECTORY} -e "ssh -p ${SSH_PORT} -o IdentitiesOnly=yes -i /tmp/git_id_rsa"
+          rm -rf build_with_config
 
-      # Étape 9 : Redémarrer le conteneur Docker du frontend
-      - name: 9 - Restart Frontend Container
+      # Étape 9 : Installer les dépendances sur le serveur (si nécessaire)
+      - name: 9 - Install dependencies on server
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
+            cd $DEPLOY_DIRECTORY && npm install
+          "
+
+      # Étape 10 : Redémarrer le conteneur Docker du frontend
+      - name: 10 - Restart Frontend Container
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
             docker ps -a --filter \"name=front_$ENV\" --format '{{.Names}}' | grep -w \"front_$ENV\" && docker stop front_$ENV || true &&
@@ -85,7 +92,7 @@ jobs:
               nginx:alpine
           "
 
-      # Étape 10 : Vérification de l'état
-      - name: 10 - Health Check
+      # Étape 11 : Vérification de l'état
+      - name: 11 - Health Check
         run: |
           curl -I http://${SERVER_IP}:${FRONTEND_PORT} || exit 1
