--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -28,6 +28,7 @@ jobs:
           echo "Environnement : $ENV"
           echo "Réseau Docker : $NETWORK"
           echo "Répertoire de déploiement : $DEPLOY_DIRECTORY"
+          echo "Nom du container : $CONTAINER_NAME"
           echo "Port Frontend : $FRONTEND_PORT"
 
       - name: 2 - Checkout repository
@@ -48,11 +49,14 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          eval $(ssh-agent -s)
+          eval $(ssh-agent -s) # Démarre l'agent SSH
           echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
           chmod 600 /tmp/git_id_rsa
-          ssh-add /tmp/git_id_rsa
+          ssh-add /tmp/git_id_rsa # Ajoute la clé à l'agent SSH
+          mkdir -p ~/.ssh # Assure que le répertoire .ssh existe
+          touch ~/.ssh/known_hosts # Assure que le fichier known_hosts existe
           ssh-keyscan -p ${SSH_PORT} -H ${SERVER_IP} >> ~/.ssh/known_hosts
+      
 
       - name: 7 - Gérer le réseau Docker
         run: |
