--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -28,7 +28,7 @@ jobs:
           echo "Environnement : $ENV"
           echo "Réseau Docker : $NETWORK"
           echo "Répertoire de déploiement : $DEPLOY_DIRECTORY"
-          echo "Nom du container : $CONTAINER_NAME"
+          echo "Nom du conteneur : $CONTAINER_NAME"
           echo "Port Frontend : $FRONTEND_PORT"
 
       - name: 2 - Checkout repository
@@ -49,14 +49,13 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          eval $(ssh-agent -s) # Démarre l'agent SSH
+          eval $(ssh-agent -s)
           echo "$SSH_PRIVATE_KEY" > /tmp/git_id_rsa
           chmod 600 /tmp/git_id_rsa
-          ssh-add /tmp/git_id_rsa # Ajoute la clé à l'agent SSH
-          mkdir -p ~/.ssh # Assure que le répertoire .ssh existe
-          touch ~/.ssh/known_hosts # Assure que le fichier known_hosts existe
+          ssh-add /tmp/git_id_rsa
+          mkdir -p ~/.ssh
+          touch ~/.ssh/known_hosts
           ssh-keyscan -p ${SSH_PORT} -H ${SERVER_IP} >> ~/.ssh/known_hosts
-      
 
       - name: 7 - Gérer le réseau Docker
         run: |
@@ -64,16 +63,38 @@ jobs:
             docker network create $NETWORK || true
           "
 
-      - name: 8 - Copy build and config to server
+      # Étape 8.1 : Sauvegarder le répertoire de déploiement (si nécessaire)
+      - name: 8.1 - Backup deployment directory
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
+            [ -d $DEPLOY_DIRECTORY ] && cp -r $DEPLOY_DIRECTORY ${DEPLOY_DIRECTORY}_backup || echo 'No directory to backup'
+          "
+
+      # Étape 8.2 : Vérifier les fichiers avant synchronisation
+      - name: 8.2 - Check destination before sync
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
+            [ -d $DEPLOY_DIRECTORY ] && ls -al $DEPLOY_DIRECTORY || echo 'No files to list'
+          "
+
+      # Étape 8.3 : Synchroniser les fichiers
+      - name: 8.3 - Synchronize files to server
         run: |
           mkdir -p build_with_config
           cp -R build/* build_with_config/
           cp package.json package-lock.json build_with_config/
-          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
-            mkdir -p $DEPLOY_DIRECTORY && chmod -R 755 $DEPLOY_DIRECTORY
-          "
-          rsync -avz --delete --exclude '.env' --exclude 'node_modules/' build_with_config/ ${SSH_USER}@${SERVER_IP}:${DEPLOY_DIRECTORY} -e "ssh -p ${SSH_PORT} -o IdentitiesOnly=yes -i /tmp/git_id_rsa"
+          rsync -avz \
+            --exclude='.env' \
+            --exclude='node_modules/' \
+            build_with_config/ ${SSH_USER}@${SERVER_IP}:${DEPLOY_DIRECTORY} -e "ssh -p ${SSH_PORT} -o IdentitiesOnly=yes -i /tmp/git_id_rsa"
           rm -rf build_with_config
+
+      # Étape 8.4 : Vérifier les fichiers après synchronisation
+      - name: 8.4 - Check destination after sync
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
+            ls -al $DEPLOY_DIRECTORY
+          "
 
       - name: 9 - Install dependencies on server
         run: |
