--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -90,18 +90,19 @@ jobs:
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
             echo 'Arrêt et suppression du conteneur existant, s'il existe...'
-            docker ps -a --filter \"name=$CONTAINER_NAME\" --format '{{.Names}}' | grep -w \"$CONTAINER_NAME\" && docker stop $CONTAINER_NAME || true
-            docker ps -a --filter \"name=$CONTAINER_NAME\" --format '{{.Names}}' | grep -w \"$CONTAINER_NAME\" && docker rm $CONTAINER_NAME || true
+            docker ps -a --filter 'name=$CONTAINER_NAME' --format '{{.Names}}' | grep -w '$CONTAINER_NAME' && docker stop $CONTAINER_NAME || true
+            docker ps -a --filter 'name=$CONTAINER_NAME' --format '{{.Names}}' | grep -w '$CONTAINER_NAME' && docker rm $CONTAINER_NAME || true
             
             echo 'Recréation du conteneur avec les dernières configurations...'
             docker run -d --name $CONTAINER_NAME \
               --network $NETWORK \
-              -p $FRONTEND_PORT:8080 \ # Changement du port interne
-              -v $DEPLOY_DIRECTORY:/usr/share/nginx/html:ro \ # Dossier monté en lecture seule
+              -p $FRONTEND_PORT:8080 \
+              -v $DEPLOY_DIRECTORY:/usr/share/nginx/html:ro \
               nginx:alpine || exit 1
             
             echo 'Conteneur recréé avec succès !'
           "
+
 
 
       - name: 11 - Health Check
