--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -88,22 +88,20 @@ jobs:
 
       - name: 10 - Restart Frontend Container
         run: |
-          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP "
-            echo 'Arrêt et suppression du conteneur existant, s'il existe...'
-            docker ps -a --filter 'name=$CONTAINER_NAME' --format '{{.Names}}' | grep -w '$CONTAINER_NAME' && docker stop $CONTAINER_NAME || true
-            docker ps -a --filter 'name=$CONTAINER_NAME' --format '{{.Names}}' | grep -w '$CONTAINER_NAME' && docker rm $CONTAINER_NAME || true
-            
-            echo 'Recréation du conteneur avec les dernières configurations...'
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
+            echo "Arrêt et suppression du conteneur existant, s'il existe..."
+            docker ps -a --filter "name=$CONTAINER_NAME" --format '{{.Names}}' | grep -w "$CONTAINER_NAME" && docker stop $CONTAINER_NAME || true
+            docker ps -a --filter "name=$CONTAINER_NAME" --format '{{.Names}}' | grep -w "$CONTAINER_NAME" && docker rm $CONTAINER_NAME || true
+
+            echo "Recréation du conteneur avec les dernières configurations..."
             docker run -d --name $CONTAINER_NAME \
               --network $NETWORK \
-              -p $FRONTEND_PORT:8080 \
+              -p $FRONTEND_PORT:$CONTAINER_PORT \
               -v $DEPLOY_DIRECTORY:/usr/share/nginx/html:ro \
               nginx:alpine || exit 1
-            
-            echo 'Conteneur recréé avec succès !'
-          "
 
-
+            echo "Conteneur recréé avec succès !"
+          EOF
 
       - name: 11 - Health Check
         run: |
