--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -90,14 +90,14 @@ jobs:
           "
 
       - name: 10 - Restart Frontend Container
-        env:
-            DEPLOY_DIRECTORY: ${{ vars.DEPLOY_DIRECTORY }}
-            CONTAINER_NAME: ${{ vars.FRONT }}_${{ vars.NGINX }}_${{ vars.ENV }}
-            NETWORK: ${{ vars.NET }}_${{ vars.ENV }}
-            FRONTEND_PORT: ${{ vars.FRONTEND_PORT }} # Garde le port d'accès public sur 3001
-            CONTAINER_PORT: ${{ vars.CONTAINER_PORT }}
-        run: |          
+        run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
+            DEPLOY_DIRECTORY=${{ vars.DEPLOY_DIRECTORY }}
+            CONTAINER_NAME=${{ vars.FRONT }}_${{ vars.NGINX }}_${{ vars.ENV }}
+            NETWORK=${{ vars.NET }}_${{ vars.ENV }}
+            FRONTEND_PORT=${{ vars.FRONTEND_PORT }}
+            CONTAINER_PORT=${{ vars.CONTAINER_PORT }}
+      
             echo "Chemin de répertoire : $DEPLOY_DIRECTORY"
             echo "Nom du conteneur : $CONTAINER_NAME"
             echo "Réseau Docker : $NETWORK"
@@ -125,7 +125,7 @@ jobs:
       
             echo "Conteneur recréé avec succès !"
           EOF
-        
+              
     
 
       - name: 11 - Health Check
