--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -122,6 +122,55 @@ jobs:
             echo "Conteneur recréé avec succès !"
           EOF
 
+      - name: 10.1 - Update Nginx configuration
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
+            DEPLOY_DIRECTORY=${{ vars.DEPLOY_DIRECTORY }}
+            MODE=${{ vars.MODE }} # Mode: "maintenance" ou "production"
+            echo "=== Configuration Nginx en mode $MODE ==="
+
+            if [ "$MODE" = "maintenance" ]; then
+              echo "Mode maintenance activé."
+              cat <<EOT > /tmp/default.conf
+            server {
+                listen 80;
+                server_name localhost;
+
+                location / {
+                    return 503;
+                }
+
+                error_page 503 /maintenance.html;
+                location = /maintenance.html {
+                    root /usr/share/nginx/html;
+                }
+            }
+            EOT
+                        else
+                          echo "Mode production activé."
+                          cat <<EOT > /tmp/default.conf
+            server {
+                listen 80;
+                server_name localhost;
+
+                location / {
+                    root /usr/share/nginx/html;
+                    index index.html index.htm;
+                }
+
+                error_page 404 /404.html;
+                location = /404.html {
+                    root /usr/share/nginx/html;
+                }
+            }
+            EOT
+            fi
+  
+            echo "Déploiement de la nouvelle configuration Nginx..."
+            docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
+            docker exec front_nginx_dev nginx -s reload
+          EOF
+
       - name: 11 - Health Check and Debugging
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
