--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -128,48 +128,53 @@ jobs:
             DEPLOY_DIRECTORY=${{ vars.DEPLOY_DIRECTORY }}
             MODE=${{ vars.MODE }} # Mode: "maintenance" ou "production"
             echo "=== Configuration Nginx en mode $MODE ==="
-      
+
+            # Création de la configuration Nginx en fonction du mode
             if [ "$MODE" = "maintenance" ]; then
               echo "Mode maintenance activé."
               cat <<EOT > /tmp/default.conf
-          server {
-              listen 80;
-              server_name localhost;
-          
-              location / {
-                  return 503;
-              }
-          
-              error_page 503 /maintenance.html;
-              location = /maintenance.html {
-                  root /usr/share/nginx/html;
-              }
-          }
-          EOT
-                else
-                  echo "Mode production activé."
-                  cat <<EOT > /tmp/default.conf
-          server {
-              listen 80;
-              server_name localhost;
-          
-              location / {
-                  root /usr/share/nginx/html;
-                  index index.html index.htm;
-              }
-          
-              error_page 404 /404.html;
-              location = /404.html {
-                  root /usr/share/nginx/html;
-              }
-          }
-          EOT
+            server {
+                listen 80;
+                server_name localhost;
+
+                location / {
+                    return 503;
+                }
+
+                error_page 503 /maintenance.html;
+                location = /maintenance.html {
+                    root /usr/share/nginx/html;
+                }
+            }
+            EOT
+                        else
+                          echo "Mode production activé."
+                          cat <<EOT > /tmp/default.conf
+            server {
+                listen 80;
+                server_name localhost;
+
+                location / {
+                    root /usr/share/nginx/html;
+                    index index.html;
+                }
+
+                error_page 404 /404.html;
+                location = /404.html {
+                    root /usr/share/nginx/html;
+                }
+            }
+            EOT
             fi
-      
+
+            # Copie de la configuration dans le conteneur
             echo "Déploiement de la nouvelle configuration Nginx..."
             docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
+            
+            # Rechargement de Nginx
             docker exec front_nginx_dev nginx -s reload
           EOF
+
 
       - name: 11 - Health Check and Debugging
         run: |
