--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -133,50 +133,61 @@ jobs:
             if [ "$MODE" = "maintenance" ]; then
               echo "Mode maintenance activé."
               cat <<EOT > /tmp/default.conf
-            server {
-                listen 80;
-                server_name localhost;
+          server {
+              listen 80;
+              server_name localhost;
+          
+              location / {
+                  return 503;
+              }
+          
+              error_page 503 /maintenance.html;
+              location = /maintenance.html {
+                  root /usr/share/nginx/html;
+              }
+          }
+          EOT
+                      else
+                        echo "Mode production activé."
+                        cat <<EOT > /tmp/default.conf
+          server {
+              listen 80;
+              server_name localhost;
+          
+              location / {
+                  root /usr/share/nginx/html;
+                  index index.html;
+              }
+          
+              error_page 404 /404.html;
+              location = /404.html {
+                  root /usr/share/nginx/html;
+              }
+          }
+          EOT
+              fi
+  
+              # Copie de la configuration dans le conteneur
+              echo "Déploiement de la nouvelle configuration Nginx..."
+              docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
+              
+              # Rechargement de Nginx
+              docker exec front_nginx_dev nginx -s reload
+            EOF
 
-                location / {
-                    return 503;
-                }
+      - name: 11 - Validate Nginx configuration
+        run: |
+          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
+            echo "Validation de la configuration Nginx..."
+            docker exec front_nginx_dev nginx -t || exit 1
+            echo "Configuration Nginx valide."
 
-                error_page 503 /maintenance.html;
-                location = /maintenance.html {
-                    root /usr/share/nginx/html;
-                }
-            }
-            EOT
-                        else
-                          echo "Mode production activé."
-                          cat <<EOT > /tmp/default.conf
-            server {
-                listen 80;
-                server_name localhost;
-
-                location / {
-                    root /usr/share/nginx/html;
-                    index index.html;
-                }
-
-                error_page 404 /404.html;
-                location = /404.html {
-                    root /usr/share/nginx/html;
-                }
-            }
-            EOT
-            fi
-
-            # Copie de la configuration dans le conteneur
-            echo "Déploiement de la nouvelle configuration Nginx..."
-            docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
-            
-            # Rechargement de Nginx
-            docker exec front_nginx_dev nginx -s reload
+            echo "Test de connectivité locale..."
+            curl -I http://localhost:${FRONTEND_PORT} || exit 1
+            echo "Service accessible localement sur le port ${FRONTEND_PORT}."
           EOF
 
-
-      - name: 11 - Health Check and Debugging
+      - name: 12 - Health Check and Debugging
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
             echo "=== Vérification du contenu monté dans le conteneur ==="
