--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -22,6 +22,8 @@ jobs:
       CONTAINER_PORT: ${{ vars.CONTAINER_PORT }}
       FRONT: ${{ vars.FRONT }}
       NGINX: ${{ vars.NGINX }}
+      REACT_APP_MAINTENANCE_MODE: ${{ vars.REACT_APP_MAINTENANCE_MODE }}
+      
 
     steps:
       - name: 1 - Afficher les variables générées
@@ -126,52 +128,53 @@ jobs:
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
             DEPLOY_DIRECTORY=${{ vars.DEPLOY_DIRECTORY }}
-            MODE=${{ vars.MODE }} # Mode: "maintenance" ou "production"
+            # Lire REACT_APP_MAINTENANCE_MODE depuis .env
+            MODE=$(grep REACT_APP_MAINTENANCE_MODE $DEPLOY_DIRECTORY/.env | cut -d '=' -f 2)
+            
             echo "=== Configuration Nginx en mode $MODE ==="
-      
-            if [ "$MODE" = "maintenance" ]; then
+            
+            if [ "$MODE" = "true" ]; then
               echo "Mode maintenance activé."
               cat <<EOT > /tmp/default.conf
-          server {
-              listen 80;
-              server_name localhost;
-          
-              location / {
-                  return 503;
-              }
-          
-              error_page 503 /maintenance.html;
-              location = /maintenance.html {
-                  root /usr/share/nginx/html;
-              }
-          }
-          EOT
-                else
-                  echo "Mode production activé."
-                  cat <<EOT > /tmp/default.conf
-          server {
-              listen 80;
-              server_name localhost;
-          
-              location / {
-                  root /usr/share/nginx/html;
-                  index index.html index.htm;
-              }
-          
-              error_page 404 /404.html;
-              location = /404.html {
-                  root /usr/share/nginx/html;
-              }
-          }
-          EOT
-                fi
-          
-                echo "Déploiement de la nouvelle configuration Nginx..."
-                docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
-                docker exec front_nginx_dev nginx -s reload
-          EOF
-          
-       
+            server {
+                listen 80;
+                server_name localhost;
+            
+                location / {
+                    return 503;
+                }
+            
+                error_page 503 /maintenance.html;
+                location = /maintenance.html {
+                    root $DEPLOY_DIRECTORY;
+                }
+            }
+            EOT
+                  else
+                    echo "Mode production activé."
+                    cat <<EOT > /tmp/default.conf
+            server {
+                listen 80;
+                server_name localhost;
+            
+                location / {
+                    root $DEPLOY_DIRECTORY;
+                    index index.html index.htm;
+                }
+            
+                error_page 404 /404.html;
+                location = /404.html {
+                    root $DEPLOY_DIRECTORY;
+                }
+            }
+            EOT
+                  fi
+            
+                  echo "Déploiement de la nouvelle configuration Nginx..."
+                  docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
+                  docker exec front_nginx_dev nginx -s reload
+            EOF        
+      
 
       - name: 11 - Validate Nginx configuration
         run: |
