--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -128,7 +128,7 @@ jobs:
         run: |
           ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
             DEPLOY_DIRECTORY=${{ vars.DEPLOY_DIRECTORY }}
-            MODE=$(grep REACT_APP_MAINTENANCE_MODE $DEPLOY_DIRECTORY/.env | cut -d '=' -f 2)
+            MODE=$(grep REACT_APP_MAINTENANCE_MODE $DEPLOY_DIRECTORY../.env | cut -d '=' -f2 | tr -d ' ')
             echo "=== Configuration Nginx en mode $MODE ==="
       
             if [ "$MODE" = "true" ]; then
@@ -167,23 +167,12 @@ jobs:
           }
           EOT
                 fi
-
+          
                 echo "Déploiement de la nouvelle configuration Nginx..."
                 docker cp /tmp/default.conf front_nginx_dev:/etc/nginx/conf.d/default.conf
                 docker exec front_nginx_dev nginx -s reload
-          EOF      
-
-      - name: 11 - Validate Nginx configuration 
-        run: |
-          ssh -p $SSH_PORT -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i /tmp/git_id_rsa $SSH_USER@$SERVER_IP << 'EOF'
-            echo "Validation de la configuration Nginx..."
-            docker exec front_nginx_dev nginx -t || exit 1
-            echo "Configuration Nginx valide."
-
-            echo "Test de connectivité locale..."
-            curl -I http://localhost:${FRONTEND_PORT} || exit 1
-            echo "Service accessible localement sur le port ${FRONTEND_PORT}."
-          EOF
+              EOF
+        
 
       - name: 12 - Health Check and Debugging
         run: |
